# opus-jni

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: ci.yml
gradle/wrapper/: gradle-wrapper.properties
opus-jni-java/: build.gradle
opus-jni-java/src/main/java/net/labymod/opus/: OpusCodec.java  OpusCodecOptions.java
opus-jni-java/src/test/java/net/labymod/opus/: MinimalEchoExample.java
opus-jni-native/: .clang-format  CMakeLists.txt  build.gradle
opus-jni-native/src/: opus_jni.c
src/main/c/: opus_jni.c
src/main/java/de/zortax/opus/: Demo.java  OpusDecoder.java  OpusEncoder.java  OpusHandler.java  OpusOptions.java
src/main/java/net/labymod/opus/: OpusCodec.java  OpusCodecOptions.java
src/main/resources/native/64/mac/: libopus_jni.dylib
src/opus_jni/c/: opus_jni.c
src/test/java/net/labymod/opus/: MinimalEchoExample.java
